@@ -7,8 +7,9 @@
 
 #include "arm.h"
 #include "gba/gba.h"
-#include "gba/supervisor/config.h"
+#include "gba/cheats.h"
 #include "gba/serialize.h"
+#include "gba/supervisor/config.h"
 
 #include "debugger/debugger.h"
 
@@ -104,6 +105,8 @@ static THREAD_ENTRY _GBAThreadRun(void* context) {
 	struct GBA gba;
 	struct ARMCore cpu;
 	struct Patch patch;
+	struct GBACheatDevice cheatDevice;
+	struct GBACheatSet cheats;
 	struct GBAThread* threadContext = context;
 	struct ARMComponent* components[GBA_COMPONENT_MAX] = {};
 	int numComponents = GBA_COMPONENT_MAX;
@@ -163,6 +166,24 @@ static THREAD_ENTRY _GBAThreadRun(void* context) {
 	if (threadContext->skipBios) {
 		GBASkipBIOS(&cpu);
 	}
+
+	GBACheatDeviceCreate(&cheatDevice);
+	GBACheatSetInit(&cheats);
+	if (!threadContext->cheats) {
+		threadContext->cheats = &cheats;
+	}
+	if (threadContext->cheatsFile) {
+		char cheat[32];
+		while (true) {
+			size_t bytesRead = threadContext->cheatsFile->readline(threadContext->cheatsFile, cheat, sizeof(cheat));
+			if (!bytesRead) {
+				break;
+			}
+			GBACheatAddCodeBreakerLine(threadContext->cheats, cheat);
+		}
+	}
+	GBACheatInstallSet(&cheatDevice, threadContext->cheats);
+	GBACheatAttachDevice(&gba, &cheatDevice);
 
 	if (threadContext->debugger) {
 		threadContext->debugger->log = GBADebuggerLogShim;
@@ -232,6 +253,7 @@ static THREAD_ENTRY _GBAThreadRun(void* context) {
 	threadContext->gba = 0;
 	ARMDeinit(&cpu);
 	GBADestroy(&gba);
+	GBACheatSetDeinit(&cheats);
 
 	threadContext->sync.videoFrameOn = false;
 	ConditionWake(&threadContext->sync.videoFrameAvailableCond);
@@ -285,6 +307,7 @@ void GBAMapArgumentsToContext(const struct GBAArguments* args, struct GBAThread*
 	}
 	threadContext->fname = args->fname;
 	threadContext->patch = VFileOpen(args->patch, O_RDONLY);
+	threadContext->cheatsFile = VFileOpen(args->cheatsFile, O_RDONLY);
 }
 
 bool GBAThreadStart(struct GBAThread* threadContext) {
